tests/snapshots/cli_dns__dns_zone_list_json.snap
---
source: tests/cli_dns.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "Items": [
    {
      "Id": 50001,
      "Domain": "example.com",
      "Records": [
        {
          "Id": 100001,
          "Type": 0,
          "Ttl": 300,
          "Value": "93.184.216.34",
          "Name": "",
          "Weight": 0,
          "Priority": 0,
          "Port": 0,
          "Flags": 0,
          "Tag": null,
          "Accelerated": false,
          "AcceleratedPullZoneId": 0,
          "LinkName": null,
          "Disabled": false,
          "Comment": null
        }
      ],
      "DateModified": "2024-01-15T10:30:00Z",
      "DateCreated": "2024-01-01T00:00:00Z",
      "NameserversDetected": true,
      "CustomNameserversEnabled": false,
      "Nameserver1": null,
      "Nameserver2": null,
      "SoaEmail": "admin@example.com",
      "NameserversNextCheck": "2024-01-16T00:00:00Z",
      "LoggingEnabled": false,
      "LoggingIpAnonymizationEnabled": false,
      "DnsSecEnabled": false
    },
    {
      "Id": 50002,
      "Domain": "test-site.org",
      "Records": [],
      "DateModified": "2024-02-10T08:00:00Z",
      "DateCreated": "2024-02-01T00:00:00Z",
      "NameserversDetected": false,
      "CustomNameserversEnabled": false,
      "Nameserver1": null,
      "Nameserver2": null,
      "SoaEmail": null,
      "NameserversNextCheck": "2024-02-11T00:00:00Z",
      "LoggingEnabled": true,
      "LoggingIpAnonymizationEnabled": false,
      "DnsSecEnabled": false
    }
  ],
  "CurrentPage": 1,
  "TotalItems": 2,
  "HasMoreItems": false
}
